--- a/public/css/style.css
+++ b/public/css/style.css
@@ -596,6 +596,11 @@ video {
   margin: 1rem;
 }
 
+.mx-2 {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -649,6 +654,10 @@ video {
   margin-left: auto;
 }
 
+.mr-4 {
+  margin-right: 1rem;
+}
+
 .mr-8 {
   margin-right: 2rem;
 }
@@ -697,14 +706,6 @@ video {
   height: 16rem;
 }
 
-.h-\[calc\(100vh-8rem\)\] {
-  height: calc(100vh - 8rem);
-}
-
-.h-full {
-  height: 100%;
-}
-
 .h-screen {
   height: 100vh;
 }
@@ -712,6 +713,10 @@ video {
 .min-h-fit {
   min-height: -moz-fit-content;
   min-height: fit-content;
+}
+
+.min-h-screen {
+  min-height: 100vh;
 }
 
 .w-2\/12 {
@@ -738,16 +743,20 @@ video {
   width: 58.333333%;
 }
 
-.w-full {
-  width: 100%;
-}
-
 .w-9\/12 {
   width: 75%;
 }
 
+.w-full {
+  width: 100%;
+}
+
 .max-w-4xl {
   max-width: 56rem;
+}
+
+.max-w-\[430px\] {
+  max-width: 430px;
 }
 
 .max-w-xs {
@@ -774,6 +783,10 @@ video {
 
 .flex-col {
   flex-direction: column;
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
 }
 
 .flex-nowrap {
@@ -809,6 +822,10 @@ video {
        column-gap: 6rem;
 }
 
+.gap-y-3 {
+  row-gap: 0.75rem;
+}
+
 .space-x-3 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(0.75rem * var(--tw-space-x-reverse));
@@ -821,12 +838,20 @@ video {
   margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
 
+.overflow-hidden {
+  overflow: hidden;
+}
+
 .overflow-y-auto {
   overflow-y: auto;
 }
 
 .rounded {
   border-radius: 0.25rem;
+}
+
+.rounded-\[6px\] {
+  border-radius: 6px;
 }
 
 .rounded-lg {
@@ -887,6 +912,19 @@ video {
   border-color: rgb(71 85 105 / var(--tw-border-opacity));
 }
 
+.bg-\[\#1e1a36\]\/70 {
+  background-color: rgb(30 26 54 / 0.7);
+}
+
+.bg-\[\#231f39\]\/60 {
+  background-color: rgb(35 31 57 / 0.6);
+}
+
+.bg-\[\#292240\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(41 34 64 / var(--tw-bg-opacity));
+}
+
 .bg-blue-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(37 99 235 / var(--tw-bg-opacity));
@@ -938,6 +976,10 @@ video {
 
 .bg-\[radial-gradient\(ellipse_at_center\2c _var\(--tw-gradient-stops\)\)\] {
   background-image: radial-gradient(ellipse at center, var(--tw-gradient-stops));
+}
+
+.bg-\[url\(https\:\/\/neluttu\.github\.io\/pro-profile\/wallpaper\.jpg\)\] {
+  background-image: url(https://neluttu.github.io/pro-profile/wallpaper.jpg);
 }
 
 .bg-gradient-to-r {
@@ -1104,6 +1146,11 @@ video {
   letter-spacing: -0.025em;
 }
 
+.text-\[\#9e9cb6\] {
+  --tw-text-opacity: 1;
+  color: rgb(158 156 182 / var(--tw-text-opacity));
+}
+
 .text-black {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
@@ -1175,9 +1222,31 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.shadow-\[0px_15px_39px_16px_rgba\(52\2c 45\2c 91\2c 0\.65\)\] {
+  --tw-shadow: 0px 15px 39px 16px rgba(52,45,91,0.65);
+  --tw-shadow-colored: 0px 15px 39px 16px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .drop-shadow-md {
   --tw-drop-shadow: drop-shadow(0 4px 3px rgb(0 0 0 / 0.07)) drop-shadow(0 2px 2px rgb(0 0 0 / 0.06));
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.backdrop-blur-sm {
+  --tw-backdrop-blur: blur(4px);
+  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+          backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+}
+
+.transition-all {
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.duration-200 {
+  transition-duration: 200ms;
 }
 
 .duration-300 {
@@ -1198,6 +1267,12 @@ video {
   left: 50%;
   transform: translate(-50%, -50%);
   margin: 0;
+}
+
+.hover\:scale-105:hover {
+  --tw-scale-x: 1.05;
+  --tw-scale-y: 1.05;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .hover\:bg-indigo-200:hover {
@@ -1344,4 +1419,51 @@ video {
   .xl\:p-0 {
     padding: 0px;
   }
+}
+
+.\[\&\>li\:hover\]\:scale-105>li:hover {
+  --tw-scale-x: 1.05;
+  --tw-scale-y: 1.05;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.\[\&\>li\:hover\]\:cursor-pointer>li:hover {
+  cursor: pointer;
+}
+
+.\[\&\>li\]\:rounded-\[4px\]>li {
+  border-radius: 4px;
+}
+
+.\[\&\>li\]\:border-2>li {
+  border-width: 2px;
+}
+
+.\[\&\>li\]\:border-\[\#2f2a47\]>li {
+  --tw-border-opacity: 1;
+  border-color: rgb(47 42 71 / var(--tw-border-opacity));
+}
+
+.\[\&\>li\]\:px-3>li {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
+.\[\&\>li\]\:py-1>li {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
+.\[\&\>li\]\:transition-all>li {
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.\[\&\>li\]\:duration-150>li {
+  transition-duration: 150ms;
+}
+
+.\[\&\>li\]\:ease-in>li {
+  transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
