--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -56,6 +56,7 @@
         {{{body}}}
       </div>
         {{> chatrooms}}
+        {{> createBlog}}
       </main>
     </div>
     {{#if logged_in}}
