--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -2,7 +2,7 @@
     class="bg-[url(https://neluttu.github.io/pro-profile/wallpaper.jpg)] bg-[#292240] flex items-center justify-center min-h-screen text-[#9e9cb6]">
     <section
         class="w-full max-w-[430px] relative bg-[#231f39]/60 rounded-[6px] shadow-[0px_15px_39px_16px_rgba(52,45,91,0.65)] backdrop-blur-sm mx-2 overflow-hidden">
-        <h2 class="text-2xl text-slate-300 uppercase text-center">Welcome {{username}}!</h2>
+        <h2 class="text-2xl text-slate-300 uppercase text-center">{{username}}'s Page</h2>
         <div>
             <h2 class=" text-xl text-slate-300 uppercase mt-5 text-center">Your Blogs:</h2>
                 {{#if blogs.length}}
@@ -31,17 +31,16 @@
                         {{/each}}
                     </div>
                 {{/if}}
-                <div class="flex justify-center items-center newBlogForm">
+                <div class="flex justify-center items-center createNew">
                     <button
                         type="submit"
-                        class="mt-2 font-bold text-md rounded-sm bg-slate-400 p-3 text-slate-800 duration-300 hover:bg-indigo-200"
+                        class="my-4 font-bold text-md rounded-sm bg-slate-400 p-3 text-slate-800 duration-300 hover:bg-indigo-200"
                     >Create New Blog</button>
                 </div>
         </div>
         
         <div class="bg-[#1e1a36]/70 p-4 text-sm font-semibold backdrop-blur-sm">
-            <h3 class="text-2xl text-slate-300 uppercase">Active Chats:</h3>
-            {{!-- active joined chats --}}
+            <h3 class="text-2xl text-slate-300 uppercase">Users Tags:</h3>
             {{#if blogs.length}}
             <ul class="flex mt-4 flex-wrap items-center justify-start gap-2 gap-y-3 [&>li]:border-2 [&>li]:border-[#2f2a47] [&>li]:px-3 [&>li]:py-1 [&>li]:rounded-[4px] [&>li]:transition-all [&>li]:duration-150 [&>li]:ease-in [&>li:hover]:scale-105 [&>li:hover]:cursor-pointer">
               {{#each blogs as |blog|}}
@@ -52,5 +51,3 @@
         </div>
         </section>
     </div> 
-
-    <script src="../js/blog.js"></script>
