--- a/public/css/style.css
+++ b/public/css/style.css
@@ -588,8 +588,12 @@ video {
   position: relative;
 }
 
-.left-4 {
-  left: 1rem;
+.bottom-4 {
+  bottom: 1rem;
+}
+
+.right-28 {
+  right: 7rem;
 }
 
 .right-4 {
@@ -600,24 +604,60 @@ video {
   top: 1rem;
 }
 
-.right-28 {
-  right: 7rem;
+.top-2 {
+  top: 0.5rem;
 }
 
-.bottom-8 {
-  bottom: 2rem;
+.top-1 {
+  top: 0.25rem;
 }
 
-.bottom-6 {
-  bottom: 1.5rem;
+.top-0 {
+  top: 0px;
 }
 
-.top-10 {
-  top: 2.5rem;
+.top-\[\] {
+  top: ;
 }
 
-.top-6 {
-  top: 1.5rem;
+.top-\[-\] {
+  top: -;
+}
+
+.top-\[-1\] {
+  top: -1;
+}
+
+.top-\[-5px\] {
+  top: -5px;
+}
+
+.top-\[-10px\] {
+  top: -10px;
+}
+
+.bottom-\[-10px\] {
+  bottom: -10px;
+}
+
+.bottom-\[-\] {
+  bottom: -;
+}
+
+.bottom-\[-15px\] {
+  bottom: -15px;
+}
+
+.bottom-\[-20px\] {
+  bottom: -20px;
+}
+
+.bottom-\[-23px\] {
+  bottom: -23px;
+}
+
+.top-\[-23px\] {
+  top: -23px;
 }
 
 .z-20 {
@@ -626,6 +666,14 @@ video {
 
 .z-50 {
   z-index: 50;
+}
+
+.z-0 {
+  z-index: 0;
+}
+
+.z-10 {
+  z-index: 10;
 }
 
 .m-4 {
@@ -706,6 +754,10 @@ video {
   margin-right: 1rem;
 }
 
+.mr-8 {
+  margin-right: 2rem;
+}
+
 .mr-auto {
   margin-right: auto;
 }
@@ -734,10 +786,6 @@ video {
   margin-top: 2rem;
 }
 
-.mr-8 {
-  margin-right: 2rem;
-}
-
 .block {
   display: block;
 }
@@ -758,36 +806,44 @@ video {
   height: 60%;
 }
 
-.h-64 {
-  height: 16rem;
-}
-
-.h-screen {
-  height: 100vh;
-}
-
 .h-3\/6 {
   height: 50%;
-}
-
-.h-full {
-  height: 100%;
 }
 
 .h-6 {
   height: 1.5rem;
 }
 
+.h-64 {
+  height: 16rem;
+}
+
+.h-full {
+  height: 100%;
+}
+
+.h-screen {
+  height: 100vh;
+}
+
 .min-h-screen {
   min-height: 100vh;
+}
+
+.w-1\/12 {
+  width: 8.333333%;
+}
+
+.w-1\/3 {
+  width: 33.333333%;
 }
 
 .w-11\/12 {
   width: 91.666667%;
 }
 
-.w-2\/12 {
-  width: 16.666667%;
+.w-2\/4 {
+  width: 50%;
 }
 
 .w-3\/5 {
@@ -802,16 +858,8 @@ video {
   width: 1.25rem;
 }
 
-.w-5\/12 {
-  width: 41.666667%;
-}
-
-.w-6\/12 {
-  width: 50%;
-}
-
-.w-7\/12 {
-  width: 58.333333%;
+.w-6 {
+  width: 1.5rem;
 }
 
 .w-9\/12 {
@@ -820,22 +868,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-.w-1\/12 {
-  width: 8.333333%;
-}
-
-.w-1\/3 {
-  width: 33.333333%;
-}
-
-.w-2\/4 {
-  width: 50%;
-}
-
-.w-6 {
-  width: 1.5rem;
 }
 
 .max-w-\[430px\] {
@@ -1024,6 +1056,11 @@ video {
   background-color: rgb(30 26 54 / 0.7);
 }
 
+.bg-\[\#231f39\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(35 31 57 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#231f39\]\/60 {
   background-color: rgb(35 31 57 / 0.6);
 }
@@ -1046,6 +1083,11 @@ video {
 .bg-pink-700 {
   --tw-bg-opacity: 1;
   background-color: rgb(190 24 93 / var(--tw-bg-opacity));
+}
+
+.bg-rose-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(225 29 72 / var(--tw-bg-opacity));
 }
 
 .bg-sky-600 {
@@ -1085,16 +1127,6 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#231f39\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(35 31 57 / var(--tw-bg-opacity));
-}
-
-.bg-rose-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(225 29 72 / var(--tw-bg-opacity));
 }
 
 .bg-\[radial-gradient\(ellipse_at_center\2c _var\(--tw-gradient-stops\)\)\] {
@@ -1175,6 +1207,11 @@ video {
   padding: 2rem;
 }
 
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
 .px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
@@ -1215,11 +1252,6 @@ video {
   padding-bottom: 2rem;
 }
 
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-
 .pl-2 {
   padding-left: 0.5rem;
 }
@@ -1238,9 +1270,9 @@ video {
   line-height: 2.25rem;
 }
 
-.text-5xl {
-  font-size: 3rem;
-  line-height: 1;
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 
 .text-lg {
@@ -1261,11 +1293,6 @@ video {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
-}
-
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
 }
 
 .font-black {
@@ -1363,11 +1390,6 @@ video {
   color: rgb(30 41 59 / var(--tw-text-opacity));
 }
 
-.text-slate-900 {
-  --tw-text-opacity: 1;
-  color: rgb(15 23 42 / var(--tw-text-opacity));
-}
-
 .text-violet-100 {
   --tw-text-opacity: 1;
   color: rgb(237 233 254 / var(--tw-text-opacity));
@@ -1388,11 +1410,6 @@ video {
   --tw-shadow: 0px 15px 39px 16px rgba(52,45,91,0.65);
   --tw-shadow-colored: 0px 15px 39px 16px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.drop-shadow-md {
-  --tw-drop-shadow: drop-shadow(0 4px 3px rgb(0 0 0 / 0.07)) drop-shadow(0 2px 2px rgb(0 0 0 / 0.06));
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 .backdrop-blur-sm {
@@ -1492,11 +1509,6 @@ video {
   background-color: rgb(129 140 248 / var(--tw-bg-opacity));
 }
 
-.hover\:text-indigo-200:hover {
-  --tw-text-opacity: 1;
-  color: rgb(199 210 254 / var(--tw-text-opacity));
-}
-
 .hover\:text-indigo-400:hover {
   --tw-text-opacity: 1;
   color: rgb(129 140 248 / var(--tw-text-opacity));
@@ -1579,10 +1591,6 @@ video {
 }
 
 @media (min-width: 640px) {
-  .sm\:hidden {
-    display: none;
-  }
-
   .sm\:max-w-md {
     max-width: 28rem;
   }
@@ -1612,8 +1620,8 @@ video {
 }
 
 @media (min-width: 768px) {
-  .md\:visible {
-    visibility: visible;
+  .md\:top-4 {
+    top: 1rem;
   }
 
   .md\:mt-0 {
@@ -1639,18 +1647,22 @@ video {
     line-height: 2rem;
   }
 
-  .md\:text-5xl {
-    font-size: 3rem;
-    line-height: 1;
-  }
-
   .md\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
   }
+
+  .md\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
+  }
 }
 
 @media (min-width: 1024px) {
+  .lg\:top-4 {
+    top: 1rem;
+  }
+
   .lg\:ml-8 {
     margin-left: 2rem;
   }
