--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -21,13 +21,13 @@
     {{#if isAuthor}}
       <button
         id="editButton"
-        class="absolute right-28 top-4 text-xs font-bold rounded-sm bg-slate-400 p-2 text-slate-800 duration-300 hover:bg-indigo-200"
+        class="absolute z-50 right-28 top-[-23px] lg:top-4 text-xs font-bold rounded-sm bg-slate-400 p-2 text-slate-800 duration-300 hover:bg-indigo-200"
       >Edit Blog</button>
 
       <button
         id="delButton"
         data-id="{{id}}"
-        class="absolute right-4 top-4 text-xs font-bold rounded-sm bg-slate-400 p-2 text-slate-800 duration-300 hover:bg-indigo-200"
+        class="absolute z-50 right-4 top-[-23px] lg:top-4 text-xs font-bold rounded-sm bg-slate-400 p-2 text-slate-800 duration-300 hover:bg-indigo-200"
       >Delete Blog</button>
     {{/if}}
     <form
