--- a/views/tags.handlebars
+++ b/views/tags.handlebars
@@ -40,7 +40,7 @@
   <button
     id="goBack"
     class="flex justify-center font-bold text-sm rounded-sm mt-8 bg-slate-400 p-2 text-slate-800 duration-300 hover:bg-indigo-200"
-  ><p>Go Back</p></button>
+  >Go Back</button>
 </div>
 
 <script src="/js/goBack.js"></script>
